--- a/front-end/src/app/core/questions/question/question.component.scss
+++ b/front-end/src/app/core/questions/question/question.component.scss
@@ -1,6 +1,6 @@
 @import 'src/styles/card.scss';
 @import 'src/styles/images.scss';
-
+@import 'src/styles/common.scss';
 h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
