--- a/front-end/src/app/gallery/gallery.component.scss
+++ b/front-end/src/app/gallery/gallery.component.scss
@@ -16,7 +16,7 @@
     border-collapse: collapse;
 }
 
-.delete {
+.delete-button {
     //float: right;
     position: relative;
     //margin-left: 8rem;
