--- a/front-end/src/app/game/end/end.component.scss
+++ b/front-end/src/app/game/end/end.component.scss
@@ -1,25 +1,8 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/layout.scss';
+@import '../../../styles/common.scss';
 
 .box{
     @extend .vertical-layout;
-    @extend .center;
-    width: fit-content;
-    margin: auto;
-    padding: 10px;
-
-    border-style: solid;
-    border-radius: 10px;;
-    border-color:  rgb(243, 58, 144);
-
     text-align: center;
 }
-
-.button-big {
-    font-size: 200%;
-    //margin-top: 5%;
-    //margin-bottom: 5%;
-    //width: 80%;
-    //height: 30%;
-    text-align: center;
-  }
