--- a/front-end/src/app/start/home/home.component.html
+++ b/front-end/src/app/start/home/home.component.html
@@ -1,7 +1,7 @@
 <app-header [title] = "headerTitle"></app-header>
-<div class="main">
-<div class="buttons-duo center">
-    <div class="button-card button-big" routerLink= "/login">Personnel</div>
-    <div class="button-card button-big" routerLink= "/players">Accueilli</div>
+<div class="main">        
+<div class="vertical-center">
+    <div class="big-button" routerLink= "/login">Personnel</div>
+    <div class="big-button" routerLink= "/players">Accueilli</div>
 </div>
 </div>
