--- a/front-end/src/app/start/password/password.component.html
+++ b/front-end/src/app/start/password/password.component.html
@@ -1,6 +1,9 @@
-<button class="button-card" routerLink= "/">
+<app-header [title] = "headerTitle"></app-header>
+<div class="goback-button" routerLink= "/">
     <i class="fa fa-arrow-left" aria-hidden="true"></i>
-</button>
+</div>
+
+<div class="main">
 <div class = "center">
     <form [formGroup]="loginForm">
         <input [formControlName]="'password'" type="password" placeholder="Entrez le mot de passe">
@@ -9,4 +12,5 @@
             Vous avez entrez une mauvaise valeur ... Veuillez réessayer !
         </div>
     </form>
+</div>
 </div>
