--- a/front-end/src/app/core/answers/answer-view/answer-view.component.html
+++ b/front-end/src/app/core/answers/answer-view/answer-view.component.html
@@ -1,3 +1,3 @@
-<div class = "card" *ngIf = "answer">
+<div class = "" *ngIf = "answer">
     <app-answer-form [quiz] = "quiz" [question] = "question" [answer] = "answer"></app-answer-form>   
 </div>
