--- a/front-end/src/app/core/players/player-list-admin/player-list-admin.component.html
+++ b/front-end/src/app/core/players/player-list-admin/player-list-admin.component.html
@@ -8,7 +8,7 @@
     <i class="fas fa-plus-circle"></i> Nouvel Accueilli</button>
 </div>
 <div class="player-list">
-    <div class="card player fixed-container" *ngFor="let player of playerList">
+    <div class="card player fixed-container-bigger" *ngFor="let player of playerList">
         <button class="button-card delete" (click)="deletePlayer(player)">
             <i class="fas fa-times"></i>
         </button>
