--- a/front-end/src/app/core/questions/question-list/question-list.component.scss
+++ b/front-end/src/app/core/questions/question-list/question-list.component.scss
@@ -1,16 +1,19 @@
 @import 'src/styles/card.scss';
 @import 'src/styles/layout.scss';
+@import '../../../../styles/common.scss';
 
 .question-list {  
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  overflow:auto; 
-  height: 400px; 
-  width: 50%; 
-  border: 1px solid #AAAAAA
+  width: 80%;
+  //margin-right: 1rem;
+  margin-top: 3rem;
 }
-  
+
+.question-card {
+  @extend .quiz-card;
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
   
 .errorMessage{
   color: rgb(238, 12, 12);
