--- a/front-end/src/app/core/questions/question-view/question-view.component.scss
+++ b/front-end/src/app/core/questions/question-view/question-view.component.scss
@@ -1,13 +1,16 @@
-@import 'src/styles/card.scss';
+@import '../../../../styles/card.scss';
 @import 'src/styles/images.scss';
 @import 'src/styles/layout.scss';
+@import '../../../../styles/common.scss';
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
-  }
+}
+
 h2 {
     color: blue;
 }
+
 .creationDate{
     font-size: x-small;
 }
@@ -25,22 +28,24 @@ h2 {
     color: rgb(238, 12, 12);
     font-weight: bold;;
 }
+
 #createAnswer {
     display: inline-block;
 }
 
 .answer-list {  
-    text-align: center;
+    /*text-align: center;
     margin-top: 1em;
     margin-left: auto;
     margin-right: auto;
     overflow:auto; 
     height: 400px; 
     width: 75%; 
-    border: 1px solid #AAAAAA
+    border: 1px solid #*/
+    @extend .quiz-list;
+    width: 80%;
   }
     
-
 .questionLabel{
     font-size: 2em;
     margin-left: auto;
