--- a/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
+++ b/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
@@ -21,7 +21,7 @@
   <div class="label">
     Charger une image depuis :<br>
     <label for="image64QuizForm" class="button-card chargingButton" >Cet appareil</label>
-    <input type="file" class="hidden" id="image64QuizForm" (change)="imageService.onChangeFile($event,imageTmp)" accept="image/*">
+    <input type="file" class="hidden" id="image64QuizForm" (change)="globalService.onChangeFile($event,imageTmp)" accept="image/*">
     <app-internet-image-modal [imageTmp] = "imageTmp"></app-internet-image-modal>
     <app-database-image-modal [imageTmp] = "imageTmp"></app-database-image-modal>
   </div>
@@ -29,8 +29,8 @@
 
 <ng-template #displayImage>  
   <div class="frame image thumb-container-small" *ngIf="imageTmp.url">
-      <button class="delete" (click)="imageService.removeImg(imageTmp)">	<i class="fas fa-times"></i></button>
-      <img class="thumbnail" [src]="imageService.getImgSrc1(imageTmp)" alt="quiz image">
+      <button class="delete" (click)="globalService.removeImg(imageTmp)">	<i class="fas fa-times"></i></button>
+      <img class="thumbnail" [src]="globalService.getImgSrc1(imageTmp)" alt="quiz image">
 </div>
 </ng-template>
 
