--- a/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.scss
+++ b/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.scss
@@ -1,33 +1,36 @@
-@import 'src/styles/card.scss';
-@import 'src/styles/layout.scss';
+@import '../../../../styles/card.scss';
+@import '../../../../styles/layout.scss';
+@import '../../../../styles/common.scss';
 
-.quiz {
-  padding: 0.5em;
-  @extend .vertical-layout;
+.card {
+  background-color: rgba(255, 255, 255, 0);
+  border-color: rgba(255, 255, 255, 0);
+}
+
+.tag{
+  width: 35%;
+  transform-origin: top;
+  border: dotted rgb(151, 87, 255);
+  color: rgb(255, 81, 0);
   text-align: center;
-}
-.invalid{
-  color: red;
+  padding-left: 0.2em;
+  text-decoration: dotted;
+  font-style: italic;
+  font-size: 80%;
+  //transform: rotate(-10deg);
+  //transform-origin: left;
+  //transform: skewY(-30deg);
+  /*-moz-transform: rotate(-30deg);
+  -webkit-transform: rotate(-30deg);
+  -khtml-transform: rotate(8deg);
+  -ms-transform: rotate(8deg);*/
 }
 
-.quiz-list {
-  @extend .responsive-list;
-  text-align: center;
-}
-
-.quiz-card{
-  @extend .button-card;
-  @extend .quiz;
-  width: 100%;
+#selectTheme {
 }
 
 .button-quiz:hover {
   cursor: pointer;
-}
-
-.delete {
-  align-self: flex-end;
-  position: relative;
 }
 
 .newQuiz{
