--- a/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.html
+++ b/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.html
@@ -1,29 +1,30 @@
-<app-header [title] = "headerTitle"></app-header>
+<app-header [title] = "headerTitle" [image] = "image"></app-header>
 <div class="goback-button" routerLink= "/players">
     <i class="fa fa-arrow-left" aria-hidden="true"></i>
 </div>
-
-<div class="main">
-<form [formGroup]="themeForm">
-    <select name="Thème" id="selectTheme" [formControlName]="'theme'">
-        <option *ngFor = "let current_theme of THEME_LIST" [value] = "current_theme">
-          {{current_theme}}
-        </option>
-    </select>
-</form>
-
-<div class="quiz-list">
-
-    <div *ngIf="quizList && filteredQuizList().length!==0; else noQuizFound">
-        <div *ngFor="let quiz of filteredQuizList()">
-            <button id="bouton" class="card button-card fixed-container-bigger"  routerLink= "./game/{{quiz.id}}">
-                <app-quiz  [quiz]="quiz"></app-quiz>
-            </button>
-        </div>
-    </div>
+<div class="home-button" routerLink= "/">
+    <i class="fa fa-home" aria-hidden="true"></i>
 </div>
 
-<ng-template #noQuizFound let-modal>
-    <div class="center" id="redCenteredMsg"> Aucun quiz trouvé </div>
-</ng-template>
+<div class="main">
+    <div class="theme-button">
+        <form [formGroup]="themeForm">
+            Thème:
+            <select name="Thème" id="selectTheme" [formControlName]="'theme'">
+                <option *ngFor = "let current_theme of THEME_LIST" [value] = "current_theme">
+                  {{current_theme}}
+                </option>
+            </select>
+        </form>
+    </div> 
+    <div class="quiz-list" *ngIf="quizList && filteredQuizList().length!==0; else noQuizFound">
+        <div class="fixed-container-bigger" *ngFor="let quiz of filteredQuizList()">
+            <div class="quiz-card"  routerLink= "./game/{{quiz.id}}">
+                <app-quiz  [quiz]="quiz"></app-quiz>
+            </div>
+        </div>
+    </div>
+    <ng-template #noQuizFound let-modal>
+        <div class="center" id="redCenteredMsg"> Aucun quiz trouvé </div>
+    </ng-template>
 </div>
