--- a/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
+++ b/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
@@ -1,17 +1,18 @@
-<button class="button-card" routerLink= "..">Retour</button>
-<button class="button-card" routerLink= "/">Home</button>
-<br>
-
-<div *ngIf ="quiz && image.url">
-  <div class="horizontal-center ">
-    <div class = "quizName"><h1>Nom du quiz : {{quiz.name}}</h1></div> 
-    <div class = "quizTheme" ><h2>Thème : {{quiz.theme}}</h2></div>
-    <div *ngIf="image.url" class="frame-little"><img class = "thumbnail" [src]="imageService.getImgSrc1(image)" alt="quiz image"></div>
-    <button class="button-card" id = "editQuizName" (click)="modalService.open(quizEditModal)">Modifier</button>
-  </div>
-  <app-question-list [quiz]="quiz"></app-question-list>
+<app-header [title] = "headerTitle" [image] = "image"></app-header>
+<div class="goback-button" routerLink= "..">
+    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+</div>
+<div class="home-button" routerLink= "/">
+    <i class="fa fa-home" aria-hidden="true"></i>
 </div>
 
+<div class="img-edit-block">
+  <button class="edit-button" id = "editQuizName" (click)="modalService.open(quizEditModal)">Modifier le quiz</button>
+</div>
+
+<div *ngIf ="quiz">
+  <app-question-list [quiz]="quiz"></app-question-list>
+</div>
 
 <ng-template #quizEditModal let-modal>
   <div class="modal-header">
