--- a/front-end/src/app/game/end/end.component.html
+++ b/front-end/src/app/game/end/end.component.html
@@ -1,8 +1,7 @@
-<div class="box">
-    <div *ngIf="player">
-        <h1>Bravo {{player.name}} !<!--Prénom--></h1>
-        <button class="button-card button-big" routerLink= "..">Recommencer</button>
-        <button class="button-card button-big" routerLink= "/players/{{player.id}}">Choisir un autre quiz</button>
+<div class="main">
+    <div class="box">
+        <div *ngIf="player"><h1>Bravo {{player.name}} !</h1></div>
+        <div class="big-button" routerLink= "..">Recommencer</div>
+        <div class="big-button" routerLink= "/players/{{player.id}}">Choisir un autre quiz</div>
     </div>
 </div>
-
