--- a/front-end/src/app/game/recap/recap.component.scss
+++ b/front-end/src/app/game/recap/recap.component.scss
@@ -11,9 +11,9 @@
     margin: auto;
     padding: 10px;
 
-    border-style: solid;
+    /*border-style: solid;
     border-radius: 10px;;
-    border-color:  rgb(243, 58, 144);
+    border-color:  rgb(243, 58, 144);*/
 
     text-align: center;
 }
