--- a/front-end/src/app/game/runner/runner.component.html
+++ b/front-end/src/app/game/runner/runner.component.html
@@ -1,4 +1,4 @@
-<app-header [title] = "headerTitle"></app-header>
+<app-header [title] = "headerTitle" [image] = "headerImage"></app-header>
 <div class="goback-button" routerLink= "../..">
     <i class="fa fa-arrow-left" aria-hidden="true"></i>
 </div>
