--- a/front-end/src/styles/card.scss
+++ b/front-end/src/styles/card.scss
@@ -10,47 +10,49 @@
   padding: 0 1em 1em 1em;
 }
 
-.button-card {
+.button-cardOLD {
   background-color: $white;
   border: solid 1px $blue;
-  //color: $blue;
   color: rgb(92, 0, 212);
   font-weight: bold;
   padding: 0.5em 1em;
   font-size: small;
 }
 
+.button-cardOLD:hover {
+  cursor: pointer;
+}
+
+.button-card {
+  background-color: rgb(255, 255, 255);
+  color: rgb(92, 0, 212);
+  font-weight: bold;
+  padding: 0.5em 1em;
+  font-size: small;
+  border: thin white;
+  box-shadow: 0 6px 10px rgba(33, 34, 65, 0.1), 0 0 6px rgba(57, 44, 88, 0.05);
+}
+
 .button-card:hover {
   cursor: pointer;
+}
+
+.quiz-card {
+  background-color: rgb(255, 255, 255);
+  color: rgb(92, 0, 212);
+  font-weight: bold;
+  padding: 0.5em 1em;
+  font-size: small;
+  box-shadow: 0 6px 10px rgba(33, 34, 65, 0.2), 0 0 6px rgba(57, 44, 88, 0.15);
+  width: 100%;
+}
+
+.quiz-card:hover {
+  cursor: pointer;
+  background-color: rgb(239, 230, 255);
 }
 
 .buttons-duo {
   margin-left: auto;
   margin-right: auto;
-}
-
-.button-big {
-  //font-size: 300%;
-  margin-bottom: 5%;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-
-  background-color: rgb(92, 0, 212);
-  border-radius: 10rem;
-  //border: solid 1px rgb(0, 69, 218);
-  color:  rgb(255, 255, 255);
-  font-weight: bold;
-  padding: 0.5em 1em;
-  font-size: 300%;
-  box-shadow: 0 6px 10px rgba(33, 34, 65, 0.2), 0 0 6px rgba(57, 44, 88, 0.15);
-}
-
-.delete{
-  position: absolute;
-  background-color: #555;
-  color: white;
-  font-size: 16px;
-  border: none;
-  right: 22px;
 }
