--- a/front-end/src/styles/common.scss
+++ b/front-end/src/styles/common.scss
@@ -1,3 +1,5 @@
+@import "../styles/variables";
+
 .main {
     margin-top: 3rem;
     display: flex;
@@ -5,40 +7,98 @@
     margin-bottom: 1rem;
 }
 
-.goback-button {
-    position: fixed;
-    background-color: rgb(92, 0, 212);
+.button-purple-theme {
+    background-color: $purple;
     border-radius: 10rem;
     padding: 0.3rem 1rem;
-    display:inline-block;
-    //border-style: solid;
-    border-color: rgb(216, 167, 255);
-    margin-top: -2.8rem;
-    margin-left: 0.5rem;
-    color: white;
+    border-color: $very-light-purple;
+    color: $white;
     box-shadow: 0 6px 10px rgba(33, 34, 65, 0.2), 0 0 6px rgba(57, 44, 88, 0.15);
 }
 
-.goback-button:hover {
+.button-purple-theme:hover {
     cursor: pointer;
 }
 
-.home-button {
+.button-purple-theme:active {
+    background-color: $deep-purple;   
+}
+
+.goback-button {
+    @extend .button-purple-theme;
     position: fixed;
-    //background-color: rgb(170, 54, 99);
-    background-color: rgb(92, 0, 212);
-    border-radius: 10rem;
-    padding: 0.3rem 1rem;
-    display:inline-block;
-    //border-style: solid;
-    border-color: rgb(216, 167, 255);
     margin-top: -2.8rem;
-    color: white;
-    box-shadow: 0 6px 10px rgba(33, 34, 65, 0.2), 0 0 6px rgba(57, 44, 88, 0.15);
+    left: 0.5rem;
+}
+
+
+.home-button {
+    @extend .button-purple-theme;
+    position: fixed;
+    margin-top: -2.8rem;
     right: 0.5rem;
 }
 
-.home-button:hover {
+.theme-button {
+    @extend .button-purple-theme;
+    position: fixed;
+    right: 2rem;
+}
+
+.theme-button:hover {
+    cursor: default;
+}
+
+.theme-button:active {
+    background: $purple;
+}
+
+.new-button {
+    @extend .button-purple-theme;
+    position: fixed;
+    /*margin-top: 0rem;
+    margin-left: 0;//0.5rem;*/
+}
+
+.edit-button {
+    @extend .button-purple-theme;
+    border: none;//thin white;
+}
+
+.img-edit-block {
+    position: fixed;
+    right: 1rem;
+    text-align: center;
+}
+
+.img-in-header {
+    position: fixed;
+    margin-top: -2.8rem;
+}
+
+.big-button {
+    @extend .button-purple-theme;
+    margin-top: 2.5%;
+    margin-bottom: 5%;
+    width: 100%;
+    height: 30%;
+    text-align: center;
+    font-weight: bold;
+    padding: 0.5em 1em;
+    font-size: 300%;
+}
+
+.delete-button {
+    float: right;
+    background-color: rgb(231, 66, 66);
+    color: rgb(255, 255, 255);
+    border: thin white;
+}
+
+.delete-button:hover {
     cursor: pointer;
 }
 
+.delete-button:active {
+    background-color: rgb(226, 25, 25); 
+}
