--- a/front-end/src/styles/images.scss
+++ b/front-end/src/styles/images.scss
@@ -15,8 +15,6 @@
 }
 
 .frame{
-    /*height: 130px;//à revoir
-    width: 130px;*/
     height: 7rem;
     width: 7rem;
     margin-left: auto;
@@ -24,6 +22,24 @@
     border-style: dashed;
     border-color: rgb(151, 87, 255);//rgb(243, 58, 144);
 }
+
+.thumbnail-header {
+    //object-fit: cover;
+    //display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    height: 2rem;//100%;
+    width: 2rem;// 100%;
+}
+
+/*.frame-header {
+    height: 2.1rem;
+    width: 2.1rem;
+    margin-left: auto;
+    margin-right: auto;
+    //border-style: dashed;
+    //border-color: rgb(151, 87, 255);//rgb(243, 58, 144);
+}*/
 
 .hidden {
     opacity: 0;
