--- a/front-end/src/styles/variables.scss
+++ b/front-end/src/styles/variables.scss
@@ -1,4 +1,11 @@
 $app-background-color: #f2f2f2;
 $blue: #3f51b5;
 $magenta: #903fb5;
-$white: white;
+
+
+$white:             white;
+$very-light-purple: rgb(216, 167, 255);
+$light-purple:      rgb(151, 87, 255);
+$purple:            rgb(92, 0, 212);
+$deep-purple:       rgb(69, 0, 158);
+
